tests/negative/runtime/arrayinsert_empty_past_zero/input.ci
void main() {
    int[] xs = [];
    arrayInsert(xs, 1, 3);
}
